--- a/src/app/app.css
+++ b/src/app/app.css
@@ -26,7 +26,7 @@
 
 .time-track-face-container {
   position: absolute;
-  top: 50%;
+  bottom: 20%;
   left: 0;
   width: 100%;
   transform: translate(0, -50%);
